--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>JS Beginner Quiz</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./assets/style.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/style.css" />
   </head>
   <body>
     <header>
@@ -36,6 +36,6 @@
         </div>
       </section>
     </main>
-    <script src="./assets/script.js"></script>
+    <script src="/assets/script.js"></script>
   </body>
 </html>
